--- a/integration-tests/debezium/README.adoc
+++ b/integration-tests/debezium/README.adoc
@@ -1,8 +1,9 @@
 == MySQL
 
-To run the MySQL Debezium integration tests you have to store the driver jar under
-`libs/mysql-connector-java-8.0.22.jar` in the current Maven module. The path can be changed by setting the
-`mysql.driver.file` property on the command line.
+To run the MySQL Debezium integration tests you need to have `com.msql:mysql-connector-j` installed in you local `.m2` repository directory.
+If it is not present, then you can https://repo1.maven.org/maven2/com/mysql/mysql-connector-j/[download] and https://maven.apache.org/guides/mini/guide-3rd-party-jars-local.html[install] it manually.
+
+The path can be changed by adding `-Dmysql.driver.file=/path/to/mysql-connector-j.jar` to the command line.
 
 == MS SQL Server
 
@@ -14,11 +15,11 @@ Therefore, to execute the MS SQL Server integration tests you need to accept the
 https://go.microsoft.com/fwlink/?linkid=857698[EULA] by creating file `integration-tests/debezium/src/test/resources/container-license-acceptance.txt` with content `mcr.microsoft.com/mssql/server:2017-CU12`
 in the current Maven module.
 
-On a Unix-like system, you can run
+On a Unix-like system, you can run.
 
 [source,shell]
 ----
-$ echo "mcr.microsoft.com/mssql/server:2017-CU12" > integration-tests/debezium/src/test/resources/container-license-acceptance.txt
+echo "mcr.microsoft.com/mssql/server:2017-CU12" > integration-tests/debezium/src/test/resources/container-license-acceptance.txt
 ----
 
 For more details see https://www.testcontainers.org/modules/databases/mssqlserver/
