--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -251,6 +251,7 @@
 *** xref:reference/extensions/jackson-protobuf.adoc[Protobuf Jackson]
 *** xref:reference/extensions/pubnub.adoc[PubNub]
 *** xref:reference/extensions/pulsar.adoc[Pulsar]
+*** xref:reference/extensions/python.adoc[Python]
 *** xref:reference/extensions/qdrant.adoc[Qdrant]
 *** xref:reference/extensions/quartz.adoc[Quartz]
 *** xref:reference/extensions/quickfix.adoc[QuickFix]
