--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -201,6 +201,7 @@
 *** xref:reference/extensions/lra.adoc[LRA]
 *** xref:reference/extensions/lzf.adoc[LZF Deflate Compression]
 *** xref:reference/extensions/langchain4j-embeddings.adoc[LangChain4j Embeddings]
+*** xref:reference/extensions/langchain4j-tokenizer.adoc[LangChain4j Tokenizer]
 *** xref:reference/extensions/language.adoc[Language]
 *** xref:reference/extensions/leveldb.adoc[LevelDB]
 *** xref:reference/extensions/log.adoc[Log]
