--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -22,10 +22,7 @@ This enables users to take advantage of the performance benefits, https://quarku
 and the https://quarkus.io/container-first[container first ethos] that Quarkus provides.
 
 Camel Quarkus provides xref:reference/index.adoc[Quarkus extensions] for many of the Camel components.
-
-Camel Quarkus also takes advantage of the many performance improvements made in Camel 3, which results in a lower memory footprint, less reliance on reflection (which is good for native application support) and faster startup times.
-
-You can xref:user-guide/defining-camel-routes.adoc[define Camel routes] using the Java DSL, XML, Kotlin, Groovy, YAML or JavaScript.
+You can xref:user-guide/defining-camel-routes.adoc[define Camel routes] using the Java DSL, XML, YAML and other languages.
 
 == Where to go next?
 
