--- a/docs/modules/ROOT/pages/migration-guide/3.15.0.adoc
+++ b/docs/modules/ROOT/pages/migration-guide/3.15.0.adoc
@@ -25,7 +25,7 @@ The following extensions have been deprecated and will be removed in a future re
 
 This is in line with the Camel core deprecation of `camel-kotlin-dsl`.
 
-== `Changes in CamelTestSupport` style of testing
+== Deprecated methods in `CamelQuarkusTestSupport`
 
 The following methods were mistakenly not marked as deprecated in 3.15.0:
 
