Restore doc xref for kotlin-dsl extension
Fixes #6448

--- a/docs/modules/ROOT/pages/reference/extensions/kotlin-dsl.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/kotlin-dsl.adoc
@@ -22,7 +22,7 @@ Support for parsing Kotlin route definitions at runtime
 [id="extensions-kotlin-dsl-whats-inside"]
 == What's inside
 
-* [Kotlin DSL]
+* xref:{cq-camel-components}:others:kotlin-dsl.adoc[Kotlin DSL]
 
 Please refer to the above link for usage and configuration details.
 
