Add Camel Quarkus LangChain4j extension #6534

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -336,6 +336,7 @@
 *** xref:reference/extensions/grpc.adoc[gRPC]
 *** xref:reference/extensions/ical.adoc[iCal]
 *** xref:reference/extensions/joor.adoc[jOOR]
+*** xref:reference/extensions/langchain4j.adoc[langChain4j]
 *** xref:reference/extensions/langchain4j-chat.adoc[langChain4j Chat]
 *** xref:reference/extensions/univocity-parsers.adoc[uniVocity CSV]// extensions: END
 ** xref:reference/components.adoc[Components]
