--- a/extensions/kamelet/runtime/src/main/doc/usage.adoc
+++ b/extensions/kamelet/runtime/src/main/doc/usage.adoc
@@ -1,11 +1,13 @@
-=== Pre-load Kamelets at build-time
+=== Preloading Kamelets at build-time
 
-This extension allows to pre-load a set of Kamelets at build time using the `quarkus.camel.kamelet.identifiers` property.
+This extension can preload a set of Kamelets at build time. You must include the names of each Kamelet, in the `quarkus.camel.kamelet.identifiers` configuration property.
 
 === Using the Kamelet Catalog
 
 A set of pre-made Kamelets can be found on the /camel-kamelets/latest[Kamelet Catalog].
-To use the Kamelet from the catalog you need to copy their yaml definition (that you can find https://github.com/apache/camel-kamelets/[in the camel-kamelet repo]) on your project in the classpath. Alternatively you can add the `camel-kamelets-catalog` artifact to your `pom.xml`:
+To use a Kamelet from the catalog, you need to copy its YAML definition (that you can find https://github.com/apache/camel-kamelets/[in the camel-kamelets repository]) to your project.
+
+Alternatively, you can add a `camel-kamelets-catalog` dependency to your application.
 
 [source,xml]
 ----
@@ -15,4 +17,4 @@ To use the Kamelet from the catalog you need to copy their yaml definition (that
 </dependency>
 ----
 
-This artifact add all the kamelets available in the catalog to your Camel Quarkus application for build time processing. If you include it with the scope `provided` the artifact should not be part of the runtime classpath, but at build time, all the kamelets listed via `quarkus.camel.kamelet.identifiers` property should be preloaded.
+You can select which Kamelets from the catalog you want to use by referencing their name in the `quarkus.camel.kamelet.identifiers` property.
