Link to new cluster service extensions from extensions where the functionality used to reside

--- a/docs/modules/ROOT/pages/reference/extensions/kubernetes.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/kubernetes.adoc
@@ -89,3 +89,9 @@ quarkus.kubernetes-client.namespace=my-namespace
 
 The full set of configuration options are documented in the https://quarkus.io/guides/kubernetes-client#quarkus-kubernetes-client_configuration[Quarkus Kubernetes Client guide].
 
+[id="extensions-kubernetes-configuration-having-only-a-single-consumer-in-a-cluster-consuming-from-a-given-endpoint"]
+=== Having only a single consumer in a cluster consuming from a given endpoint
+
+This functionality is provided by the `camel-quarkus-kubernetes-cluster-service` extension.
+Refer to the xref:reference/extensions/kubernetes-cluster-service.adoc[extension documentation] for more information.
+
