langchain4j: fix link to camel core parameter binding usage

--- a/docs/modules/ROOT/pages/reference/extensions/langchain4j.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/langchain4j.adoc
@@ -81,5 +81,5 @@ public interface CustomAiService {
 }
 ```
 
-More details could be found about camel parameter binding annotations at https://camel.apache.org/manual/parameter-binding-annotations.html.
+You can find more details about Camel Parameter Binding annotations in the xref:manual::parameter-binding-annotations.adoc[manual].
 
